# finAI

./: README.md  package-lock.json
IA/: fin_ai.py
SQL/: hello_world.sql
backend/: .gitignore  Cargo.toml
backend/src/: main.rs
backend/src/controllers/: fin_ai_controller.rs  meta_orcamento_controller.rs  mod.rs  planejamento_financeiro_controller.rs  transacao_controller.rs  user_controller.rs
backend/src/models/: meta_orcamento.rs  mod.rs  planejamento_financeiro.rs  transacao.rs  user.rs
finAI/: App.tsx  app.json  package-lock.json  package.json
finAI/src/context/: AuthContext.js
finAI/src/screens/EditTransaction/: index.tsx
finAI/src/screens/Home/: Index.tsx
finAI/src/screens/NewTransaction/: index.tsx
finAI/src/screens/SignIn/: index.tsx
finAI/src/screens/SignUp/: index.tsx
finAI/src/services/: aiService.ts  api.ts  userService.ts
